Added google verification.

--- a/react_files/public/index.html
+++ b/react_files/public/index.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
+            name="google-site-verification"
+            content="Q9jZF-J4TU-SAwVruOYLBAv4-9vKTVtt37kgNXKV0GA"
+        />
+        <meta
             name="description"
             content="Website helping users share rent, share goods, and separate finances in a way that guarantees no person will feel envy towards someone else.
             This is done by using rental harmony algorithms that try to solve sharing problem, i.e., split goods between people in a way that doesn’t cause resentment.
