--- a/react_files/public/index.html
+++ b/react_files/public/index.html
@@ -10,13 +10,17 @@
         />
         <meta
             name="description"
-            content="Website helping users share rent, share goods, and separate finances in a way that guarantees no person will feel envy towards someone else.
-            This is done by using rental harmony algorithms that try to solve sharing problem, i.e., split goods between people in a way that doesn’t cause resentment.
+            content="We help users share rent, share goods, and separate finances in a way that mathematically guarantees no person will feel envy towards someone else.
+            This is done by using fair division and rental harmony algorithms that are made to solve sharing problems, i.e., split goods between people in a way that doesn’t cause resentment.
             The algorithms take everyone’s monetary valuations and compute an allocation which result in no one feeling envy towards someone else. Additionally, these algorithms result in a pareto-efficient situation, where no one would be better of without making at least 1 other person worse of.
             Multiple harmony algorithms are included for each sharing case.
             Users can share their rent, indivisible goods, and their finances, which can include both indivisible goods and money.
             
             Created by Emmanuil Borovikovs"
+        />
+        <meta
+            name="keywords"
+            content="sharing, share rent, rental harmony, fair division"
         />
         <!--
       manifest.json provides metadata used when your web app is installed on a
