--- a/react_files/public/index.html
+++ b/react_files/public/index.html
@@ -36,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Fair / Share</title>
+        <title>SplitSum</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
